--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,8 @@
 name: "BMS Pace"
 description: "Pace BMS Interface"
-version: "1.0.21"
+version: "1.0.22"
 slug: "bms_pace"
+url: "https://github.com/Tertiush/bmspace"
 init: false
 arch:
   - aarch64
