--- a/repository.yaml
+++ b/repository.yaml
@@ -1,4 +1,4 @@
 
-"name": "BMS Pace"
+"name": "BMS Pace addon for Home Assistant"
 "url": "https://github.com/Tertiush/bmspace"
 "maintainer": "Tertius Hyman"
