--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 name: "BMS Pace"
 description: "Pace BMS Interface"
-version: "1.0.22"
+version: "1.0.23"
 slug: "bms_pace"
 url: "https://github.com/Tertiush/bmspace"
 init: false
@@ -16,7 +16,7 @@ options:
   mqtt_port: 1883
   mqtt_user: "mqtt-users"
   mqtt_password: "mqtt-users"
-  mqtt_ha_discovery: true
+  mqtt_ha_discovery: false
   mqtt_ha_discovery_topic: "homeassistant"
   mqtt_base_topic: "bmspace"
   connection_type: "IP"
