--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 name: "BMS Pace"
 description: "Pace BMS Interface"
-version: "2.2.0a"
+version: "2.2.0"
 slug: "bms_pace"
 url: "https://github.com/Tertiush/bmspace/pace-bms"
 init: false
