More robust skip infoflag logic

--- a/pace-bms-dev/config.yaml
+++ b/pace-bms-dev/config.yaml
@@ -1,6 +1,6 @@
 name: "BMS Pace - Development"
 description: "Pace BMS Interface"
-version: "dev"
+version: "2.2.1a dev"
 slug: "bms_pace_dev"
 url: "https://github.com/Tertiush/bmspace/pace-bms-dev"
 init: false
